# on-policy-consistency-training

./: .env.example  .gitignore  .gitmodules  PROGRAMMATIC_REGRESSION_EVALS.md  README.md  collate_experiments.py  cookbook-on-policy.py  eval_sageeval.py  generate_sft_data.py  local_inference.py  main.py  manage_checkpoints.py  merge_tinker_lora.py  prepare_gpqa_dataset.py  prepare_ifeval_dataset.py  prepare_math500_dataset.py  prepare_offpolicy_data.py  prepare_truthfulqa_dataset.py  pyproject.toml  score_gpqa.py  score_ifeval.py  score_math500.py  score_truthfulqa.py  train_distillation.py  train_distillation_evc.py  train_distillation_ppo.py  train_local_distillation.py  train_local_evc.py  train_local_offpolicy_distillation.py  train_local_ppo.py  train_local_sft.py  train_offpolicy_distillation.py  train_overfit.py  train_tinker_evc_opd_pipeline.py  train_tinker_sft.py  view_metrics.py  vllm_inference.py  vllm_retry_stuck.py  write_regression_summary.py
figures/: sageeval-figures.tex
jailbreak/: README.md  eval_static.py  generation.py  model_config.py  model_loader.py  strongreject_api.py  target_adapter.py  train_opcd_tinker.py
sageeval-judge/: kiet-judge.py  kiet-plot.py  plot_safety_curve.py  sageeval-judge-gemini.py  sageeval-judge.py  view_sageeval.py  view_sweep1.py
sycophancy/: README.md  eval_bct_v2.py  eval_bct_v2_gpt_oss.py  eval_bct_v2_nemotron.py  filter_bct_training_data_gpt_oss_v5.py  generate_bct_training_data.py  generate_bct_training_data_gpt_oss.py  generate_bct_training_data_nemotron.py  mmlu_dataset_transformation.py  train_bct.py  (+6 more)
(+54 files in other folders)
